--- a/index.html
+++ b/index.html
@@ -181,5 +181,8 @@
             </div> 
         </div>  
     <script src="carrito.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert.js"></script>
+
 </body>
 </html>
